--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
     </parent>
 
     <groupId>hu.progmasters</groupId>
-    <artifactId>week3-haiku-bozsol</artifactId>
+    <artifactId>haiku</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>11</java.version>
@@ -74,7 +74,7 @@
                     <verbose>true</verbose>
                     <images>
                         <image>
-                            <name>bankapplication</name>
+                            <name>haiku</name>
                             <build>
                                 <dockerFileDir>${project.basedir}/src/main/docker/</dockerFileDir>
                                 <assembly>
